# fargo_trail

./: Cargo.toml
src/: main.rs
